Reformating all for the test cases